--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ select {
   margin: 45px 10% 0 0;
 }
 .menu {
-  padding: 20px 0 30px 0;
+  padding: 20px 0 40px 0;
 }
 .menu__list {
   list-style: none;
@@ -77,7 +77,8 @@ select {
 .menu__list-item.active a {
   text-decoration: underline #F68E2F;
 }
-/*burger*/
+
+/*burger menu*/
 #nav-icon1 {
   display: none;
   position: absolute;
@@ -114,6 +115,7 @@ select {
 /*carousel first*/
 .carousel {
   position: relative;
+  top: -16px;
   height: 600px;
   width: 100%;
 }
@@ -150,12 +152,14 @@ select {
   background-image: url("https://cdn.cnn.com/cnnnext/dam/assets/160125090613-acura-nsx-super-169.jpg");
 }
 
+
+
 .category {
 font-size: 40px;
 }
 .category_top {
-  margin: 0 10%;
-  font-size: 40px;
+  margin: 20px 10%;
+  font-size: 35px;
 }
 .line {
   height: 1px;
@@ -168,14 +172,6 @@ font-size: 40px;
 }
 
 
-.carousel_second {
-  background-image: url("https://elitecar.rent/wp-content/themes/avto-prokat/images/BgCarOne.png");
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-size: 100% 460px;
-  background-color: white;
-  margin: 0 auto;
-}
 .catalog {
   padding-top: 320px;
   padding-left: 180px;
@@ -199,18 +195,18 @@ font-size: 40px;
 .main { 
   color: black;
   width: 65%;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 .car1 {
   position: relative;
   height: 400px;
-  width:100%;
+  width: 100%;
 }
 .car {
   position: absolute;
 }
 .triangle-topleft1 {
-  margin:-400px 0;
+  margin:-404px 0;
   border-top: 400px solid white;  
   border-right: 250px solid transparent;  
 }
@@ -236,7 +232,7 @@ button.read {
   width: 540px;
 }
 .triangle-bottomright {
-  margin: -500px 0 0 170px;
+  margin: -502px 0 0 170px;
   border-bottom: 500px solid white; 
   border-left: 370px solid transparent;
 }
@@ -250,33 +246,35 @@ button.read {
 .car3 {
   position: relative;
   height: 200px;
+  width: 100%;
 }
 .triangle-topleft2 {
-  margin: -200px 0;
+  margin: -204px 0;
   border-top: 200px solid white; 
   border-right: 100px solid transparent;  
 }
 .car4 {
   height: 300px;
   width: 43%;
-  margin: 74px 0 0 -150px;
+  margin: 9% 0 0 -10%;
 }
 .triangle-bottomright_2 {
-  margin: 74px 0 0 15.3%;
+  margin: 107px 0 0 17.2%;
   border-bottom: 310px solid white; 
   border-left: 200px solid transparent;
 }
 .car5 {
+  position: static;
   height: 415px;
-  width: 47.3%;
-  margin: 20px 0 0 -19.3%;
+  width: 160%;
+  margin: 20px 0 0 -60%;
   }
 .triangle-topleft3 {
-  margin: 20px 0 0 -19.3%;
-  border-top: 415px solid white; 
+  z-index: 2;
+  margin: -418px 0 0 -19.4%;
+  border-top: 408px solid white; 
   border-right: 235px solid transparent;  
 }
-
 
 footer {
   position: relative;
@@ -284,7 +282,7 @@ footer {
   padding-top: 40px;
   margin-top: -20px;
 }
-footer h5 {
+footer h4 {
   margin: 0;
   padding-bottom: 10px;
 }
@@ -338,9 +336,7 @@ footer h5 {
   .langsearch {
     display: block;
   }
-  .search {
-    margin: -100px 0 0 10%;
-  }
+ 
   .search_adaptive {
     display: block;
     width: 100%;
@@ -415,6 +411,3 @@ footer h5 {
   .menu_state_open  {
     height: 100%;
   }
-
-
-
